--- a/main.html
+++ b/main.html
@@ -4,10 +4,46 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-</head>
 
+
+
+    <title>Centered Box with Text</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: lightgray;
+        }
+
+        .container {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            background-color: lightblue;
+            border: 2px solid black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .text {
+            position: absolute;
+            color: purple;
+            font-size: 16px;
+        }
+    </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
+    <div class="container">
+        <span class="text">This is center.</span>
+    </div>
+</body>
+</html>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
